--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,18 @@ text-decoration: none;
     margin: 0 auto;
 }
 
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 p,h1,h2,h3,h4,h5,h6 {
     margin-top: 0;
     margin-bottom: 0;
+}
+
+img {
+    display: block;
 }
 
 .visually-hidden {
@@ -45,10 +54,12 @@ p,h1,h2,h3,h4,h5,h6 {
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: #404bbf;
 }
 
 .header-container{
 display: flex;
+
 }
 
 .header-navigation {
@@ -93,10 +104,11 @@ display: flex;
 
 .header-address{
     font-style: normal;
+    margin-left: auto;
 }
+
 .header-address-list {
     display: flex;
-    
 }
 
 .header-address-item {
@@ -147,6 +159,9 @@ display: flex;
         cursor: pointer;
         display: block;
         margin: 0 auto;
+        padding: 16px 32px;
+        border-radius: 4px;
+        border: none;
 }
 
 .hero-btn:hover,
@@ -159,17 +174,21 @@ display: flex;
 /* -------------------------FEATURE------------------------- */
 
 .feature {
-    padding-top: 120px;
-    padding-bottom: 120px;
+
 }
 
 .feature-tittle {
     
 }
 
-.feature-list {}
+.feature-list {
+    display: flex;
+    gap: 24px;
+}
 
-.feature-item {}
+.feature-item {
+    width: calc((100% - 3 * 24px) / 4);
+}
 
 .feature-subtitle {
     font-weight: 500;
@@ -192,8 +211,6 @@ display: flex;
 /* -------------------------TEAM------------------------- */
 .team {
     background: #f4f4fd;
-    padding-top: 120px;
-    padding-bottom: 120px;
 }
 
 .team-title {
@@ -206,10 +223,19 @@ display: flex;
         margin-bottom: 72px;
 }
 
-.team-list {}
+.team-list {
+    display: flex;
+    gap: 24px;
+}
 
 .team-item {
     background-color: #FFFFFF;
+    width: calc((100% - 3 * 24px) / 4);
+    border-radius: 0 0 4px 4px;
+}
+
+.team-image {
+    margin-bottom: 32px;
 }
 
 .team-subtitle {
@@ -219,6 +245,7 @@ display: flex;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        margin-bottom: 8px;
 }
 
 .team-text {
@@ -227,14 +254,15 @@ display: flex;
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        padding-bottom: 32px;
 }
 /* -------------------------------------------------- */
 
 /* -------------------------PORTFOLIO------------------------- */
 .portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
+
 }
+    
 
 .portfolio-title {
         font-size: 36px;
@@ -246,9 +274,20 @@ display: flex;
         margin-bottom: 72px;
 }
 
-.portfolio-list {}
+.portfolio-list {
+display: flex;
+flex-wrap: wrap;
+gap: 48px 24px;
+}
 
-.portfolio-item {}
+.portfolio-item {
+    border-bottom: 1px solid #e7e9fc;
+    width: calc((100% - 2 * 24px) / 3);
+}
+
+.portfolio-image {
+
+}
 
 .portfolio-subtitle {
     font-weight: 500;
@@ -256,6 +295,9 @@ display: flex;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        padding-top: 32px;
+        padding-left: 16px;
+        padding-bottom: 8px;
 }
 
 .portfolio-text {
@@ -263,6 +305,8 @@ display: flex;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        padding-left: 16px;
+        padding-bottom: 32px;
 }
 
 /* -------------------------------------------------- */
@@ -295,4 +339,6 @@ display: flex;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
+        max-width: 264px;
+        margin-top: 16px;
 }
